# paper---mcp---server

./: .gitignore  CMakeLists.txt  README.md  setup_linux.sh  setup_windows.bat
config/: claude_desktop_config.json  log_config.json  server_config.json
include/: http_rpc.h  log_manager.h  mcp_httplib_wrapper.h  mcp_server.h  mcp_spdlog_config.h  mcp_types.h  my_rpc.h  rpc_manager.h  std_handle_rpc.h
mpc_src/common/http_rpc/: http_rpc.cpp
mpc_src/common/load_config/: mcp_spdlog_config.cpp
mpc_src/common/mcp_server/: mcp_server.cpp  mcp_types.cpp
mpc_src/common/my_rpc/: my_rpc.cpp  rpc_manager.cpp
mpc_src/common/std_handle/: std_handle_rpc.cpp
mpc_src/server/: server_main.cpp
scripts/: mcp_bridge.js  mcp_bridge.py  ollama_mcp_demo.py  run_server.sh  test_mcp_server.py
test_tools/: test_http.cpp  test_log.cpp  test_mcp.cpp  test_rpc.cpp  test_std.cpp
test_tools/test_cpp_http/: CMakeLists.txt  client.cpp  server.cpp
tools/: paper_tools.cpp  paper_tools.h  vision_tools.cpp  vision_tools.h
tools/scripts/: cnki_search.py  extract_data_points.py  search_latest_data.py  update_paper_data.py  vision_client.py
